--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/profile\ -2.jpeg);"></div>
-							<h1><span>Louie Jie Mahusay</span></h1>
-							<h3><span>Web Developer / Photographer</span></h3>
+							<h1><span>Nilesh Thengde</span></h1>
+							<h3><span>Web Developer / App Developer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-twitter2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+									<li><a href="https://x.com/_nilesh_t?t=-GVOl2g8glLCqPhjxOFq9g&s=09"><i class="icon-twitter2"></i></a></li>
+									<!-- <li><a href="#"><i class="icon-facebook2"></i></a></li> -->
+									<li><a href="https://www.linkedin.com/in/nilesh0700"><i class="icon-linkedin2"></i></a></li>
+									<!-- <li><a href="#"><i class="icon-dribbble2"></i></a></li> -->
 								</ul>
 							</p>
 						</div>
