--- a/index.html
+++ b/index.html
@@ -95,23 +95,26 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Nilesh Thengde</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">+91 9764623344</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">nileshthengde@gmail.com</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">nileshthengde.com</span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">Chh. Sambhajinagar, Maharashtra, India. 431009</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<h2>Hello There!👋</h2>
+					<p>I'm a passionate web and app developer with a knack for creating sleek, user-friendly designs and powerful functionalities. My journey in the tech world has been nothing short of exhilarating, highlighted by achieving the All India Rank One in the Smart India Hackathon – one of the biggest and most prestigious hackathons in the country! 🏆</p>
+
+					<p>Whether it's building a dynamic website or developing a cutting-edge mobile app, I thrive on challenges and love bringing innovative ideas to life. When I'm not coding, you can find me exploring the latest tech trends, brainstorming new project ideas, or maybe just enjoying a good cup of coffee. ☕</p>
+
+					<p>Let's connect and create something amazing together!</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="https://x.com/_nilesh_t?t=-GVOl2g8glLCqPhjxOFq9g&s=09"><i class="icon-twitter2"></i></a></li>
+							<!-- <li><a href="#"><i class="icon-facebook3"></i></a></li> -->
+							<li><a href="https://www.linkedin.com/in/nilesh0700"><i class="icon-linkedin2"></i></a></li>
+							<!-- <li><a href="#"><i class="icon-dribbble2"></i></a></li> -->
 						</ul>
 					</p>
 				</div>
@@ -136,11 +139,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<h3 class="timeline-title">Full Stack Developer</h3>
+									<span class="company">Neuro Dynamic Infotronics - Current</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Responisble to Design and Develop Software solutions using technologies like Ruby on Rails and Flutter</p>
 								</div>
 							</div>
 						</li>
@@ -148,15 +151,15 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<h3 class="timeline-title">Technical Research analyst</h3>
+									<span class="company">CeverPe - January 2024 - April 2024</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Assisted in Research and Develpment for Buy now Pay Later (BNPL) solutions.</p>
 								</div>
 							</div>
 						</li>
-						<li class="animate-box timeline-unverted">
+						<!-- <li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -167,13 +170,13 @@
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 								</div>
 							</div>
-						</li>
+						</li> -->
 
 						<br>
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<!-- <li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -184,20 +187,20 @@
 									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
-						</li>
+						</li> -->
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Bachelors Degree</h3>
-									<span class="company">University Name - 2002 - 2006</span>
+									<span class="company">DBATU - 2020 - 2024</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>In the field of Computer Science and Engineering with a specialization in Artificial Intelligence and Machine Learning</p>
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<!-- <li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -208,8 +211,8 @@
 									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
-						</li>
-						<li class="animate-box timeline-unverted">
+						</li> -->
+						<!-- <li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -220,7 +223,7 @@
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 								</div>
 							</div>
-						</li>
+						</li> -->
 			    	</ul>
 				</div>
 			</div>
@@ -243,13 +246,37 @@
 								<i class="icon-paintbrush"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Design</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Software Development</h3>
+								<p>git your highly customizable Software solution developed</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center">
+
+						<div class="feature-left">
+							<span class="icon">
+								<i class="icon-bargraph"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>Web Developent</h3>
+								<p>I can help you with building an highly optimised website for your business.</p>
+							</div>
+						</div>
+
+					</div>
+					<div class="col-md-4 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="icon-genius"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>App Development</h3>
+								<p>Get your Idea turned into an user friendly mobile application.</p>
 							</div>
 						</div>
 					</div>
 
-					<div class="col-md-4 text-center">
+					<!-- <div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
 								<i class="icon-briefcase"></i>
@@ -259,9 +286,8 @@
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 							</div>
 						</div>
-
-					</div>
-					<div class="col-md-4 text-center">
+					</div> -->
+					<!-- <div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
 								<i class="icon-search"></i>
@@ -271,45 +297,20 @@
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 							</div>
 						</div>
-					</div>
+					</div> -->
+					<div class="row">
 				</div>
 
 
-				<div class="row">
-					<div class="col-md-4 text-center">
 
-						<div class="feature-left">
-							<span class="icon">
-								<i class="icon-bargraph"></i>
-							</span>
-							<div class="feature-copy">
-								<h3>Web Developent</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-							</div>
-						</div>
-
-					</div>
-
-					<div class="col-md-4 text-center">
-						<div class="feature-left">
-							<span class="icon">
-								<i class="icon-genius"></i>
-							</span>
-							<div class="feature-copy">
-								<h3>Web Marketing</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-							</div>
-						</div>
-
-					</div>
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
 								<i class="icon-chat"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Support</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>SEO</h3>
+								<p>I can help you get more web traffic, evantually converting more leads for your business.</p>
 							</div>
 						</div>
 					</div>
