--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+	
 	</head>
 	<body>
 		
@@ -72,9 +73,14 @@
 							<h3><span>Web Developer / App Developer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://x.com/_nilesh_t?t=-GVOl2g8glLCqPhjxOFq9g&s=09"><i class="icon-twitter2"></i></a></li>
+									<li><a href="https://x.com/_nilesh_t?t=-GVOl2g8glLCqPhjxOFq9g&s=09"><i class="icon-twitter2 "></i></a>
+									</li>
 									<!-- <li><a href="#"><i class="icon-facebook2"></i></a></li> -->
-									<li><a href="https://www.linkedin.com/in/nilesh0700"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/nilesh0700"><i class="icon-linkedin2"></i></a>
+									</li>
+									<li><a href="mailto:nileshthengde@gmail.com" onclick="copyEmailToClipboard(event)"><i class="icon-mail"></i></a>
+										<div class="popup">nileshthengde@gmail.com</div>
+									</li>
 									<!-- <li><a href="#"><i class="icon-dribbble2"></i></a></li> -->
 								</ul>
 							</p>
@@ -115,6 +121,9 @@
 							<!-- <li><a href="#"><i class="icon-facebook3"></i></a></li> -->
 							<li><a href="https://www.linkedin.com/in/nilesh0700"><i class="icon-linkedin2"></i></a></li>
 							<!-- <li><a href="#"><i class="icon-dribbble2"></i></a></li> -->
+							<li><a href="mailto:nileshthengde@gmail.com" onclick="copyEmailToClipboard(event)"><i class="icon-mail"></i></a>
+								<div class="popup">nileshthengde@gmail.com</div>
+							</li>
 						</ul>
 					</p>
 				</div>
@@ -328,26 +337,26 @@
 			</div>
 			<div class="row row-pb-md">
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
+					<div class="chart" data-percent="90"><span><strong>HTML5</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
+					<div class="chart" data-percent="90"><span><strong>CSS3</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
+					<div class="chart" data-percent="75"><span><strong>JavaScript</strong>75%</span></div>
 				</div>
 
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
+					<div class="chart" data-percent="75"><span><strong>ReactJs</strong>75%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
+					<div class="chart" data-percent="80"><span><strong>Flutter</strong>80%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Webflow</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>Ruby</strong>85%</span></div>
+					<div class="chart" data-percent="70"><span><strong>Ruby</strong>70%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
@@ -356,23 +365,23 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">HTML5/CSS3</span><span class="value-right">95%</span></h3>
+						<h3><span class="name-left">AI/ML</span><span class="value-right">75%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:75%">
 						  </div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">WordPress</span><span class="value-right">90%</span></h3>
+						<h3><span class="name-left">Blockchain</span><span class="value-right">60%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-2 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:60%">
 						  </div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">PHP</span><span class="value-right">80%</span></h3>
+						<h3><span class="name-left"></span>Social Media <span class="value-right">80%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -380,7 +389,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Java</span><span class="value-right">85%</span></h3>
+						<h3><span class="name-left">Communication</span><span class="value-right">85%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -388,7 +397,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<!-- <div class="col-md-6">
 					<div class="progress-wrap">
 						<h3><span class="name-left">Design</span><span class="value-right">100%</span></h3>
 						<div class="progress">
@@ -420,13 +429,13 @@
 						  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
 						  </div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div id="fh5co-work" class="fh5co-bg-dark">
+	<!-- <div id="fh5co-work" class="fh5co-bg-dark">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -558,7 +567,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	
 	<div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
@@ -566,14 +575,23 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
+					<p>Lets connect and create something amazing together!</p>
+					<p>Best Ways to get in touch:</p>
+					<p>
+						<ul class="fh5co-social-icons">
+							<li><a href="https://x.com/_nilesh_t?t=-GVOl2g8glLCqPhjxOFq9g&s=09"><i class="icon-twitter2"></i></a></li>
+							<!-- <li><a href="#"><i class="icon-facebook3"></i></a></li> -->
+							<li><a href="https://www.linkedin.com/in/nilesh0700"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="mailto:nileshthengde@gmail.com" onclick="copyEmailToClipboard(event)"><i class="icon-mail"></i></a></li>
+							<!-- <li><a href="#"><i class="icon-dribbble2"></i></a></li> -->
+						</ul>
+					</p>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div id="fh5co-consult">
+	<!-- <div id="fh5co-consult">
 		<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
 			<div class="overlay"></div>
 		</div>
@@ -614,16 +632,16 @@
 
 			</form>	
 		</div>
-	</div>
+	</div> -->
 
-	<div id="map" class="fh5co-map"></div>
-	</div>
+	<!-- <div id="map" class="fh5co-map"></div>
+	</div> -->
 	
 	<div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
+					<p>&copy; 2024 All Rights Reserved. <br>Designed and Developed by <a href="https://www.linkedin.com/in/nilesh0700" target="_blank">Nilesh Thengde</a></p>
 				</div>
 			</div>
 		</div>
@@ -632,6 +650,21 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
 	</div>
+
+	<script>
+		function copyEmailToClipboard(event) {
+			event.preventDefault();
+			const email = 'nileshthengde@gmail.com';
+			const tempInput = document.createElement('input');
+			tempInput.value = email;
+			document.body.appendChild(tempInput);
+			tempInput.select();
+			document.execCommand('copy');
+			document.body.removeChild(tempInput);
+			alert('Email copied to clipboard: ' + email);
+		}
+	</script>
+	
 	
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
