--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Profile &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<link rel="icon" href="images/favicon.ico">
+	<title> Nilesh Thengde</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="description" content="this is a portfolio website of Nilesh Thengde who is a Software Developer" />
+	<meta name="keywords" content="Website Developer App Application Mobile Software webdeveloper freelancer android flutter development appdeveloper ReactJs Javascript Best in India Aurangabad Maharashtra" />
 	<meta name="author" content="freehtml5.co" />
 
 	<!-- 
