--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title> Nilesh Thengde</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="this is a portfolio website of Nilesh Thengde who is a Software Developer" />
-	<meta name="keywords" content="Website Developer App Application Mobile Software webdeveloper freelancer android flutter development appdeveloper ReactJs Javascript Best in India Aurangabad Maharashtra" />
+	<meta name="keywords" content="Website Developer Nilesh Thengde nileshthengde App Application Mobile Software webdeveloper freelancer android flutter development appdeveloper ReactJs Javascript Best in India Aurangabad Maharashtra" />
 	<meta name="author" content="freehtml5.co" />
 
 	<!-- 
