added some tags for seo

--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/profile\ -2.jpeg);"></div>
+							<div class="profile-thumb" style="background: url(images/profile\ -2.jpeg);" alt="Nilesh Thengde Picture" caption="Nilesh Thengde"></div>
 							<h1><span>Nilesh Thengde</span></h1>
 							<h3><span>Web Developer / App Developer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://x.com/_nilesh_t?t=-GVOl2g8glLCqPhjxOFq9g&s=09"><i class="icon-twitter2 "></i></a>
+									<li><a href="https://x.com/_nilesh_t?t=-GVOl2g8glLCqPhjxOFq9g&s=09" alt="Nilesh Thengde on Twitter"><i class="icon-twitter2 "></i></a>
 									</li>
 									<!-- <li><a href="#"><i class="icon-facebook2"></i></a></li> -->
-									<li><a href="https://www.linkedin.com/in/nilesh0700"><i class="icon-linkedin2"></i></a>
+									<li><a href="https://www.linkedin.com/in/nilesh0700" alt="Nilesh Thengde on LinkedIn"><i class="icon-linkedin2"></i></a>
 									</li>
-									<li><a href="mailto:nileshthengde@gmail.com" onclick="copyEmailToClipboard(event)"><i class="icon-mail"></i></a>
+									<li><a href="mailto:nileshthengde@gmail.com" onclick="copyEmailToClipboard(event)" alt="Nilesh Thengde Email Address"><i class="icon-mail"></i></a>
 										<div class="popup">nileshthengde@gmail.com</div>
 									</li>
 									<!-- <li><a href="#"><i class="icon-dribbble2"></i></a></li> -->
@@ -96,7 +96,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>About Me</h2>
+					<h2 alt="About Nilesh Thengde">About Me</h2>
 				</div>
 			</div>
 			<div class="row">
