added author and title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="this is a portfolio website of Nilesh Thengde who is a Software Developer" />
 	<meta name="keywords" content="Website Developer Nilesh Thengde nileshthengde App Application Mobile Software webdeveloper freelancer android flutter development appdeveloper ReactJs Javascript Best in India Aurangabad Maharashtra" />
-	<meta name="author" content="freehtml5.co" />
+	<meta name="author" content="Nilesh Thengde" />
+	<meta title="Nilesh Thengde"/>
 
 	<!-- 
 	//////////////////////////////////////////////////////
